Plugins/LuaScriptingPlugin/Parser/Parser.vb
Imports System.Collections.Generic
Imports System.Text

Public Partial Class Parser
    Public Function ParseChunk(ByVal input As ParserInput(Of Char), ByRef success As Boolean) As Chunk
        Me.SetInput(input)
        Dim chunk As Chunk = ParseChunk(success)
        If Me.Position < input.Length Then
            success = False
            [Error]("Failed to parse remained input.")
        End If
        Return chunk
    End Function

    Private Function ParseChunk(ByRef success As Boolean) As Chunk
        Dim reskey As New Tuple(Of Integer, String)(Position, "Chunk")
        If ParsingResults.ContainsKey(reskey) Then
            Dim parsingResult As Tuple(Of Object, Boolean, Integer)= ParsingResults(reskey)
            success = CBool(parsingResult.Item2)
            Position = CInt(parsingResult.Item3)
            Return TryCast(parsingResult.Item1, Chunk)
        End If

        Dim errorCount As Integer = Errors.Count
        Dim chunk As New Chunk()
        Dim start_position As Integer = position

        ParseSpOpt(success)

        While True
            While True
                Dim seq_start_position1 As Integer = position
                Dim statement As Statement = ParseStatement(success)
                If success Then
                    chunk.Statements.Add(statement)
                Else
                    Exit While
                End If

                While True
                    Dim seq_start_position2 As Integer = position
                    MatchTerminal(";"c, success)
                    If Not success Then
                        Exit While
                    End If

                    ParseSpOpt(success)
                    Exit While
                End While
                success = True
                Exit While
            End While
            If Not success Then
                Exit While
            End If
        End While
        success = True

        ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(chunk, success, position)
        Return chunk
    End Function

    Private Function ParseStatement(ByRef success As Boolean) As Statement
        Dim reskey = New Tuple(Of Integer, String)(position, "Statement")
        If ParsingResults.ContainsKey(reskey) Then
            Dim parsingResult = ParsingResults(reskey)
            success = parsingResult.Item2
            position = parsingResult.Item3
            Return TryCast(parsingResult.Item1, Statement)
        End If

        Dim errorCount As Integer = Errors.Count
        Dim statement As Statement = Nothing

        statement = ParseAssignment(success)
        If success Then
            ClearError(errorCount)
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(statement, success, position)
            Return statement
        End If

        statement = ParseFunction(success)
        If success Then
            ClearError(errorCount)
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(statement, success, position)
            Return statement
        End If

        statement = ParseLocalVar(success)
        If success Then
            ClearError(errorCount)
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(statement, success, position)
            Return statement
        End If

        statement = ParseLocalFunc(success)
        If success Then
            ClearError(errorCount)
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(statement, success, position)
            Return statement
        End If

        statement = ParseReturnStmt(success)
        If success Then
            ClearError(errorCount)
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(statement, success, position)
            Return statement
        End If

        statement = ParseBreakStmt(success)
        If success Then
            ClearError(errorCount)
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(statement, success, position)
            Return statement
        End If

        statement = ParseDoStmt(success)
        If success Then
            ClearError(errorCount)
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(statement, success, position)
            Return statement
        End If

        statement = ParseIfStmt(success)
        If success Then
            ClearError(errorCount)
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(statement, success, position)
            Return statement
        End If

        statement = ParseForStmt(success)
        If success Then
            ClearError(errorCount)
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(statement, success, position)
            Return statement
        End If

        statement = ParseForInStmt(success)
        If success Then
            ClearError(errorCount)
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(statement, success, position)
            Return statement
        End If

        statement = ParseWhileStmt(success)
        If success Then
            ClearError(errorCount)
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(statement, success, position)
            Return statement
        End If

        statement = ParseRepeatStmt(success)
        If success Then
            ClearError(errorCount)
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(statement, success, position)
            Return statement
        End If

        statement = ParseExprStmt(success)
        If success Then
            ClearError(errorCount)
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(statement, success, position)
            Return statement
        End If

        Return statement
    End Function

    Private Function ParseAssignment(ByRef success As Boolean) As Assignment
        Dim reskey = New Tuple(Of Integer, String)(position, "Assignment")
        If ParsingResults.ContainsKey(reskey) Then
            Dim parsingResult = ParsingResults(reskey)
            success = parsingResult.Item2
            position = parsingResult.Item3
            Return TryCast(parsingResult.Item1, Assignment)
        End If

        Dim errorCount As Integer = Errors.Count
        Dim assignment As New Assignment()
        Dim start_position As Integer = position

        assignment.VarList = ParseVarList(success)
        If Not success Then
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(assignment, success, position)
            Return assignment
        End If

        ParseSpOpt(success)

        MatchTerminal("="c, success)
        If Not success Then
            [Error]("Failed to parse '=' of Assignment.")
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(assignment, success, position)
            Return assignment
        End If

        ParseSpOpt(success)

        assignment.ExprList = ParseExprList(success)
        If Not success Then
            [Error]("Failed to parse ExprList of Assignment.")
            position = start_position
        End If

        If success Then
            ClearError(errorCount)
        End If
        ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(assignment, success, position)
        Return assignment
    End Function

    Private Function ParseFunction(ByRef success As Boolean) As [Function]
        Dim reskey = New Tuple(Of Integer, String)(position, "Function")
        If ParsingResults.ContainsKey(reskey) Then
            Dim parsingResult = ParsingResults(reskey)
            success = parsingResult.Item2
            position = parsingResult.Item3
            Return TryCast(parsingResult.Item1, [Function])
        End If

        Dim errorCount As Integer = Errors.Count
        Dim [function] As New [Function]()
        Dim start_position As Integer = position

        MatchTerminalString("function", success)
        If Not success Then
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)([function], success, position)
            Return [function]
        End If

        ParseSpReq(success)
        If Not success Then
            [Error]("Failed to parse SpReq of Function.")
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)([function], success, position)
            Return [function]
        End If

        [function].Name = ParseFunctionName(success)
        If Not success Then
            [Error]("Failed to parse Name of Function.")
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)([function], success, position)
            Return [function]
        End If

        ParseSpOpt(success)

        [function].Body = ParseFunctionBody(success)
        If Not success Then
            [Error]("Failed to parse Body of Function.")
            position = start_position
        End If

        If success Then
            ClearError(errorCount)
        End If
        ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)([function], success, position)
        Return [function]
    End Function

    Private Function ParseLocalVar(ByRef success As Boolean) As LocalVar
        Dim reskey = New Tuple(Of Integer, String)(position, "LocalVar")
        If ParsingResults.ContainsKey(reskey) Then
            Dim parsingResult = ParsingResults(reskey)
            success = parsingResult.Item2
            position = parsingResult.Item3
            Return TryCast(parsingResult.Item1, LocalVar)
        End If

        Dim errorCount As Integer = Errors.Count
        Dim localVar As New LocalVar()
        Dim start_position As Integer = position

        MatchTerminalString("local", success)
        If Not success Then
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(localVar, success, position)
            Return localVar
        End If

        ParseSpReq(success)
        If Not success Then
            [Error]("Failed to parse SpReq of LocalVar.")
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(localVar, success, position)
            Return localVar
        End If

        localVar.NameList = ParseNameList(success)
        If Not success Then
            [Error]("Failed to parse NameList of LocalVar.")
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(localVar, success, position)
            Return localVar
        End If

        ParseSpOpt(success)

        While True
            Dim seq_start_position1 As Integer = position
            MatchTerminal("="c, success)
            If Not success Then
                Exit While
            End If

            ParseSpOpt(success)

            localVar.ExprList = ParseExprList(success)
            If Not success Then
                [Error]("Failed to parse ExprList of LocalVar.")
                position = seq_start_position1
            End If
            Exit While
        End While
        success = True

        ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(localVar, success, position)
        Return localVar
    End Function

    Private Function ParseLocalFunc(ByRef success As Boolean) As LocalFunc
        Dim reskey = New Tuple(Of Integer, String)(position, "LocalFunc")
        If ParsingResults.ContainsKey(reskey) Then
            Dim parsingResult = ParsingResults(reskey)
            success = parsingResult.Item2
            position = parsingResult.Item3
            Return TryCast(parsingResult.Item1, LocalFunc)
        End If

        Dim errorCount As Integer = Errors.Count
        Dim localFunc As New LocalFunc()
        Dim start_position As Integer = position

        MatchTerminalString("local", success)
        If Not success Then
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(localFunc, success, position)
            Return localFunc
        End If

        ParseSpReq(success)
        If Not success Then
            [Error]("Failed to parse SpReq of LocalFunc.")
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(localFunc, success, position)
            Return localFunc
        End If

        MatchTerminalString("function", success)
        If Not success Then
            [Error]("Failed to parse 'function' of LocalFunc.")
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(localFunc, success, position)
            Return localFunc
        End If

        ParseSpReq(success)
        If Not success Then
            [Error]("Failed to parse SpReq of LocalFunc.")
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(localFunc, success, position)
            Return localFunc
        End If

        localFunc.Name = ParseName(success)
        If Not success Then
            [Error]("Failed to parse Name of LocalFunc.")
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(localFunc, success, position)
            Return localFunc
        End If

        ParseSpOpt(success)

        localFunc.Body = ParseFunctionBody(success)
        If Not success Then
            [Error]("Failed to parse Body of LocalFunc.")
            position = start_position
        End If

        If success Then
            ClearError(errorCount)
        End If
        ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(localFunc, success, position)
        Return localFunc
    End Function

    Private Function ParseExprStmt(ByRef success As Boolean) As ExprStmt
        Dim reskey = New Tuple(Of Integer, String)(position, "ExprStmt")
        If ParsingResults.ContainsKey(reskey) Then
            Dim parsingResult = ParsingResults(reskey)
            success = parsingResult.Item2
            position = parsingResult.Item3
            Return TryCast(parsingResult.Item1, ExprStmt)
        End If

        Dim errorCount As Integer = Errors.Count
        Dim exprStmt As New ExprStmt()

        exprStmt.Expr = ParseExpr(success)
        If success Then
            ClearError(errorCount)
        Else
            [Error]("Failed to parse Expr of ExprStmt.")
        End If
        ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(exprStmt, success, position)
        Return exprStmt
    End Function

    Private Function ParseReturnStmt(ByRef success As Boolean) As ReturnStmt
        Dim reskey = New Tuple(Of Integer, String)(position, "ReturnStmt")
        If ParsingResults.ContainsKey(reskey) Then
            Dim parsingResult = ParsingResults(reskey)
            success = parsingResult.Item2
            position = parsingResult.Item3
            Return TryCast(parsingResult.Item1, ReturnStmt)
        End If

        Dim errorCount As Integer = Errors.Count
        Dim returnStmt As New ReturnStmt()
        Dim start_position As Integer = position

        MatchTerminalString("return", success)
        If Not success Then
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(returnStmt, success, position)
            Return returnStmt
        End If

        ParseSpReq(success)
        If Not success Then
            [Error]("Failed to parse SpReq of ReturnStmt.")
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(returnStmt, success, position)
            Return returnStmt
        End If

        returnStmt.ExprList = ParseExprList(success)
        success = True

        ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(returnStmt, success, position)
        Return returnStmt
    End Function

    Private Function ParseBreakStmt(ByRef success As Boolean) As BreakStmt
        Dim reskey = New Tuple(Of Integer, String)(position, "BreakStmt")
        If ParsingResults.ContainsKey(reskey) Then
            Dim parsingResult = ParsingResults(reskey)
            success = parsingResult.Item2
            position = parsingResult.Item3
            Return TryCast(parsingResult.Item1, BreakStmt)
        End If

        Dim errorCount As Integer = Errors.Count
        Dim breakStmt As New BreakStmt()
        Dim start_position As Integer = position

        MatchTerminalString("break", success)
        If Not success Then
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(breakStmt, success, position)
            Return breakStmt
        End If

        ParseSpReq(success)
        If Not success Then
            [Error]("Failed to parse SpReq of BreakStmt.")
            position = start_position
        End If

        If success Then
            ClearError(errorCount)
        End If
        ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(breakStmt, success, position)
        Return breakStmt
    End Function

    Private Function ParseDoStmt(ByRef success As Boolean) As DoStmt
        Dim reskey = New Tuple(Of Integer, String)(position, "DoStmt")
        If ParsingResults.ContainsKey(reskey) Then
            Dim parsingResult = ParsingResults(reskey)
            success = parsingResult.Item2
            position = parsingResult.Item3
            Return TryCast(parsingResult.Item1, DoStmt)
        End If

        Dim errorCount As Integer = Errors.Count
        Dim doStmt As New DoStmt()
        Dim start_position As Integer = position

        MatchTerminalString("do", success)
        If Not success Then
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(doStmt, success, position)
            Return doStmt
        End If

        ParseSpReq(success)
        If Not success Then
            [Error]("Failed to parse SpReq of DoStmt.")
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(doStmt, success, position)
            Return doStmt
        End If

        doStmt.Body = ParseChunk(success)
        If Not success Then
            [Error]("Failed to parse Body of DoStmt.")
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(doStmt, success, position)
            Return doStmt
        End If

        MatchTerminalString("end", success)
        If Not success Then
            [Error]("Failed to parse 'end' of DoStmt.")
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(doStmt, success, position)
            Return doStmt
        End If

        ParseSpReq(success)
        If Not success Then
            [Error]("Failed to parse SpReq of DoStmt.")
            position = start_position
        End If

        If success Then
            ClearError(errorCount)
        End If
        ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(doStmt, success, position)
        Return doStmt
    End Function

    Private Function ParseIfStmt(ByRef success As Boolean) As IfStmt
        Dim reskey = New Tuple(Of Integer, String)(position, "IfStmt")
        If ParsingResults.ContainsKey(reskey) Then
            Dim parsingResult = ParsingResults(reskey)
            success = parsingResult.Item2
            position = parsingResult.Item3
            Return TryCast(parsingResult.Item1, IfStmt)
        End If

        Dim errorCount As Integer = Errors.Count
        Dim ifStmt As New IfStmt()
        Dim start_position As Integer = position

        MatchTerminalString("if", success)
        If Not success Then
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(ifStmt, success, position)
            Return ifStmt
        End If

        ParseSpReq(success)
        If Not success Then
            [Error]("Failed to parse SpReq of IfStmt.")
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(ifStmt, success, position)
            Return ifStmt
        End If

        ifStmt.Condition = ParseExpr(success)
        If Not success Then
            [Error]("Failed to parse Condition of IfStmt.")
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(ifStmt, success, position)
            Return ifStmt
        End If

        MatchTerminalString("then", success)
        If Not success Then
            [Error]("Failed to parse 'then' of IfStmt.")
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(ifStmt, success, position)
            Return ifStmt
        End If

        ParseSpReq(success)
        If Not success Then
            [Error]("Failed to parse SpReq of IfStmt.")
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(ifStmt, success, position)
            Return ifStmt
        End If

        ifStmt.ThenBlock = ParseChunk(success)
        If Not success Then
            [Error]("Failed to parse ThenBlock of IfStmt.")
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(ifStmt, success, position)
            Return ifStmt
        End If

        While True
            Dim elseifBlock As ElseifBlock = ParseElseifBlock(success)
            If success Then
                ifStmt.ElseifBlocks.Add(elseifBlock)
            Else
                Exit While
            End If
        End While
        success = True

        While True
            Dim seq_start_position1 As Integer = position
            MatchTerminalString("else", success)
            If Not success Then
                Exit While
            End If

            ParseSpReq(success)
            If Not success Then
                [Error]("Failed to parse SpReq of IfStmt.")
                position = seq_start_position1
                Exit While
            End If

            ifStmt.ElseBlock = ParseChunk(success)
            If Not success Then
                [Error]("Failed to parse ElseBlock of IfStmt.")
                position = seq_start_position1
            End If
            Exit While
        End While
        success = True

        MatchTerminalString("end", success)
        If Not success Then
            [Error]("Failed to parse 'end' of IfStmt.")
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(ifStmt, success, position)
            Return ifStmt
        End If

        ParseSpReq(success)
        If Not success Then
            [Error]("Failed to parse SpReq of IfStmt.")
            position = start_position
        End If

        If success Then
            ClearError(errorCount)
        End If
        ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(ifStmt, success, position)
        Return ifStmt
    End Function

    Private Function ParseElseifBlock(ByRef success As Boolean) As ElseifBlock
        Dim reskey = New Tuple(Of Integer, String)(position, "ElseifBlock")
        If ParsingResults.ContainsKey(reskey) Then
            Dim parsingResult = ParsingResults(reskey)
            success = parsingResult.Item2
            position = parsingResult.Item3
            Return TryCast(parsingResult.Item1, ElseifBlock)
        End If

        Dim errorCount As Integer = Errors.Count
        Dim elseifBlock As New ElseifBlock()
        Dim start_position As Integer = position

        MatchTerminalString("elseif", success)
        If Not success Then
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(elseifBlock, success, position)
            Return elseifBlock
        End If

        ParseSpReq(success)
        If Not success Then
            [Error]("Failed to parse SpReq of ElseifBlock.")
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(elseifBlock, success, position)
            Return elseifBlock
        End If

        elseifBlock.Condition = ParseExpr(success)
        If Not success Then
            [Error]("Failed to parse Condition of ElseifBlock.")
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(elseifBlock, success, position)
            Return elseifBlock
        End If

        MatchTerminalString("then", success)
        If Not success Then
            [Error]("Failed to parse 'then' of ElseifBlock.")
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(elseifBlock, success, position)
            Return elseifBlock
        End If

        ParseSpReq(success)
        If Not success Then
            [Error]("Failed to parse SpReq of ElseifBlock.")
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(elseifBlock, success, position)
            Return elseifBlock
        End If

        elseifBlock.ThenBlock = ParseChunk(success)
        If Not success Then
            [Error]("Failed to parse ThenBlock of ElseifBlock.")
            position = start_position
        End If

        If success Then
            ClearError(errorCount)
        End If
        ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(elseifBlock, success, position)
        Return elseifBlock
    End Function

    Private Function ParseForStmt(ByRef success As Boolean) As ForStmt
        Dim reskey = New Tuple(Of Integer, String)(position, "ForStmt")
        If ParsingResults.ContainsKey(reskey) Then
            Dim parsingResult = ParsingResults(reskey)
            success = parsingResult.Item2
            position = parsingResult.Item3
            Return TryCast(parsingResult.Item1, ForStmt)
        End If

        Dim errorCount As Integer = Errors.Count
        Dim forStmt As New ForStmt()
        Dim start_position As Integer = position

        MatchTerminalString("for", success)
        If Not success Then
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(forStmt, success, position)
            Return forStmt
        End If

        ParseSpReq(success)
        If Not success Then
            [Error]("Failed to parse SpReq of ForStmt.")
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(forStmt, success, position)
            Return forStmt
        End If

        forStmt.VarName = ParseName(success)
        If Not success Then
            [Error]("Failed to parse VarName of ForStmt.")
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(forStmt, success, position)
            Return forStmt
        End If

        ParseSpOpt(success)

        MatchTerminal("="c, success)
        If Not success Then
            [Error]("Failed to parse '=' of ForStmt.")
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(forStmt, success, position)
            Return forStmt
        End If

        ParseSpOpt(success)

        forStmt.Start = ParseExpr(success)
        If Not success Then
            [Error]("Failed to parse Start of ForStmt.")
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(forStmt, success, position)
            Return forStmt
        End If

        MatchTerminal(","c, success)
        If Not success Then
            [Error]("Failed to parse ',' of ForStmt.")
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(forStmt, success, position)
            Return forStmt
        End If

        ParseSpOpt(success)

        forStmt.[End] = ParseExpr(success)
        If Not success Then
            [Error]("Failed to parse End of ForStmt.")
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(forStmt, success, position)
            Return forStmt
        End If

        While True
            Dim seq_start_position1 As Integer = position
            MatchTerminal(","c, success)
            If Not success Then
                Exit While
            End If

            ParseSpOpt(success)

            forStmt.[Step] = ParseExpr(success)
            If Not success Then
                [Error]("Failed to parse Step of ForStmt.")
                position = seq_start_position1
            End If
            Exit While
        End While
        success = True

        MatchTerminalString("do", success)
        If Not success Then
            [Error]("Failed to parse 'do' of ForStmt.")
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(forStmt, success, position)
            Return forStmt
        End If

        ParseSpReq(success)
        If Not success Then
            [Error]("Failed to parse SpReq of ForStmt.")
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(forStmt, success, position)
            Return forStmt
        End If

        forStmt.Body = ParseChunk(success)
        If Not success Then
            [Error]("Failed to parse Body of ForStmt.")
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(forStmt, success, position)
            Return forStmt
        End If

        MatchTerminalString("end", success)
        If Not success Then
            [Error]("Failed to parse 'end' of ForStmt.")
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(forStmt, success, position)
            Return forStmt
        End If

        ParseSpReq(success)
        If Not success Then
            [Error]("Failed to parse SpReq of ForStmt.")
            position = start_position
        End If

        If success Then
            ClearError(errorCount)
        End If
        ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(forStmt, success, position)
        Return forStmt
    End Function

    Private Function ParseForInStmt(ByRef success As Boolean) As ForInStmt
        Dim reskey = New Tuple(Of Integer, String)(position, "ForInStmt")
        If ParsingResults.ContainsKey(reskey) Then
            Dim parsingResult = ParsingResults(reskey)
            success = parsingResult.Item2
            position = parsingResult.Item3
            Return TryCast(parsingResult.Item1, ForInStmt)
        End If

        Dim errorCount As Integer = Errors.Count
        Dim forInStmt As New ForInStmt()
        Dim start_position As Integer = position

        MatchTerminalString("for", success)
        If Not success Then
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(forInStmt, success, position)
            Return forInStmt
        End If

        ParseSpReq(success)
        If Not success Then
            [Error]("Failed to parse SpReq of ForInStmt.")
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(forInStmt, success, position)
            Return forInStmt
        End If

        forInStmt.NameList = ParseNameList(success)
        If Not success Then
            [Error]("Failed to parse NameList of ForInStmt.")
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(forInStmt, success, position)
            Return forInStmt
        End If

        ParseSpReq(success)
        If Not success Then
            [Error]("Failed to parse SpReq of ForInStmt.")
            position = start_position
            ParsingResults(reskey) = New Tuple(Of Object, Boolean, Integer)(forInStmt, success, position)
            Return forInStmt
        End If
